--- a/views/salesinput.pug
+++ b/views/salesinput.pug
@@ -21,42 +21,42 @@ head
       strong KGL
     ul.list-unstyled.components(style='font-size: 19px;')
       li
-        a(href='#')
+        a(href='/home')
           i.fas.fa-home
           |                         Home 
       li        
-        a.dropdown-toggle(href='#pageSubmenu' data-toggle='collapse' aria-expanded='false' )
+        a.dropdown-toggle(href='#purchaseSubmenu' data-toggle='collapse' aria-expanded='false' )
           i.fas.fa-copy
           |                           Purchases
-        ul#pageSubmenu.collapse.list-unstyled
+        ul#purchaseSubmenu.collapse.list-unstyled
           li
             a(href='/purchases') Purchase Form
           li            
             a(href='/purchaselist') Purchase Record           
       li.active     
-        a.dropdown-toggle(href='#pageSubmenu' data-toggle='collapse' aria-expanded='false' style='color:#181553')
+        a.dropdown-toggle(href='#saleSubmenu' data-toggle='collapse' aria-expanded='false' style='color:#181553')
           i.fas.fa-copy
           |                           Sales
-        ul#pageSubmenu.collapse.list-unstyled
+        ul#saleSubmenu.collapse.list-unstyled
           li
             a(href='/sales') Sales Form
           li
             a(href='/saleslist') Sales Record
       li        
-        a.dropdown-toggle(href='#pageSubmenu' data-toggle='collapse' aria-expanded='false' style='color:#181553')
+        a.dropdown-toggle(href='#farmSubmenu' data-toggle='collapse' aria-expanded='false' )
           i.fas.fa-copy
           |                           Farm
-        ul#pageSubmenu.collapse.list-unstyled
+        ul#farmSubmenu.collapse.list-unstyled
           li
             a(href='/farm') Farm Form
           li
             a(href='/farmlist') Farm Record          
       li
-        a(href='/sales')
+        a(href='/prices')
           i.fas.fa-briefcase
-          |                         Farm      
+          |                         Prices      
       li
-        a(href='')
+        a(href='/account')
           i.fas.fa-user
           |                         Account
     ul.list-unstyled.CTAs      
@@ -78,7 +78,7 @@ head
           ul.nav.navbar-nav.ml-auto
             li.nav-item.active
               button.btn.btn-outline-primary
-                a.nav-link(href='index.html' style='color:#181553;  ') LogOut
+                a.nav-link(href='/logout' style='color:#181553;  ') LogOut
     #blog-container.container-fluid
       .row
         .col-md-12
